# ComputerVisionCoinGlass

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: chatgpt_conversation.md  fuentes.md  inkscape_guide.md  session_summary_2026-07-13.md  tasks.md
src/: LiquidMapManualSetLevel.pine  main.py  ocr_test.py  ocr_test_paddle.py  ocr_test_tesseract.py
tests/: test_main.py
