[project]
name = "computervision-coinglass"
version = "0.1.0"
description = "Vision OCR system for CoinGlass liquidation maps"
requires-python = ">=3.12"
dependencies = [
    "opencv-python>=4.10.0",
    "pillow>=11.0.0",
    "numpy>=2.0.0",
    "easyocr>=1.7.0",
    "matplotlib>=3.9.0",
    "pandas>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.7.0",
]
