[project]
name = "computervision-coinglass"
version = "0.1.0"
description = "Vision OCR system for CoinGlass liquidation maps"
requires-python = ">=3.12"
dependencies = [
    "opencv-python>=4.10.0",
    "pillow>=11.0.0",
    "easyocr>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: tests que requieren EasyOCR (deselect with '-m \"not slow\"')",
]
